# winebasin

./: Cargo.toml  readme.md  winetricks32.sh  winetricks64.sh
src/: main.rs
