[package]
name = "winebasin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aargvark = "0.2.1"
command-fds = "0.3.0"
defer = "0.2.1"
directories = "5.0.1"
format-bytes = "0.3.0"
loga = "0.4.0"
os_pipe = { version = "1.1.5", features = ["io_safety"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shlex = "1.3.0"
tempfile = "3.10.1"
