[package]
name = "winebasin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aargvark = "0.8"
command-fds = "0.3"
defer = "0.2"
directories = "5"
format-bytes = "0.3"
loga = "0.5"
os_pipe = { version = "1", features = ["io_safety"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
tempfile = "3"
